# st-poland-bounty

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: package-lock.json  package.json
app/src/app/: layout.tsx  page.tsx  providers.tsx
docs/: architecture.md  demo-script.md  threat-model.md
keeper/: index.ts
programs/workflow_engine/: Cargo.toml
programs/workflow_engine/src/: constant.rs  errors.rs  lib.rs
programs/workflow_engine/src/instructions/: approve_task.rs  close_run.rs  create_template.rs  create_workspace.rs  escalate_task.rs  mod.rs  retry_task.rs  start_workflow_run.rs  submit_task_result.rs
programs/workflow_engine/src/state/: mod.rs  state_definition.rs  task.rs  workflow_run.rs  workflow_template.rs  workspace.rs
scripts/: demo-scenario.ts
tests/: workflow_engine.model.spec.ts  workflow_engine.ts
tests/helpers/: workflow-model.ts
