[package]
name = "workflow_engine"
version = "0.1.0"
description = "On-chain workflow engine for backend orchestration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "workflow_engine"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
